--- a/adiutor/package.json
+++ b/adiutor/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "watch": "nodemon bin/www",
     "run": "DEBUG=adiutor npm start",
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.12.4",
@@ -14,6 +14,7 @@
     "express": "~4.12.4",
     "jade": "~1.9.2",
     "morgan": "~1.5.3",
-    "serve-favicon": "~2.2.1"
+    "serve-favicon": "~2.2.1",
+    "colors": "*"
   }
 }
