Added Passport, Mongoose, and connected Mongodb

--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "express": "~4.12.4",
     "jade": "~1.9.2",
     "morgan": "~1.5.3",
-    "serve-favicon": "~2.2.1"
+    "serve-favicon": "~2.2.1",
+    "passport": "*",
+    "passport-local": "*",
+    "mongoose": "*",
+    "express-session": "*",
+    "moment": "*"
   }
 }
