Login page added with login functionality

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "passport-local": "*",
     "mongoose": "*",
     "express-session": "*",
-    "moment": "*"
+    "moment": "*",
+    "bcrypt-nodejs": "*"
   }
 }
