--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "request": "*",
     "cheerio": "*",
     "socket.io": "*",
-    "underscore": "*"
+    "underscore": "*",
+    "mongoose-deep-populate": "*"
   }
 }
