Minor fixes and improvements
- Moved passwords to separate file with weak protection
- More view improvements

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cheerio": "*",
     "socket.io": "*",
     "underscore": "*",
-    "mongoose-deep-populate": "*"
+    "mongoose-deep-populate": "*",
+    "crypto": "*"
   }
 }
