--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://bitbucket.org/apexal/adiutor"
+    "url": "https://github.com/Apexal/adiutor"
   },
   "dependencies": {
     "body-parser": "~1.12.4",
