--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   ],
   "scripts": {
     "setup": "python2 connect.py",
-    "watch": "nodemon app",
-    "start": "node app"
+    "watch": "nodemon app.js",
+    "debug": "DEBUG=express:* node ./app.js",
+    "start": "NODE_ENV=production node ./app.js"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,16 @@
     "request": "*",
     "cheerio": "*",
     "socket.io": "*",
-    "mongoose-deep-populate": "*"
+    "mongoose-deep-populate": "*",
+    "compression": "*"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^2.3.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-jshint": "^1.11.2",
+    "gulp-minify-css": "^1.2.0",
+    "gulp-strip-debug": "^1.0.2",
+    "gulp-uglify": "^1.2.0"
   }
 }
