--- a/package.json
+++ b/package.json
@@ -20,23 +20,24 @@
     "url": "https://github.com/Apexal/adiutor"
   },
   "dependencies": {
+    "bluebird": "^2.9.34",
     "body-parser": "~1.12.4",
+    "cheerio": "*",
     "colors": "*",
+    "compression": "*",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.12.4",
-    "jade": "~1.9.2",
-    "morgan": "~1.5.3",
-    "serve-favicon": "~2.2.1",
-    "mongoose": "*",
     "express-session": "*",
+    "jade": "~1.9.2",
     "moment": "*",
+    "mongoose": "*",
+    "mongoose-deep-populate": "*",
+    "morgan": "~1.5.3",
     "nodemailer": "*",
     "request": "*",
-    "cheerio": "*",
-    "socket.io": "*",
-    "mongoose-deep-populate": "*",
-    "compression": "*"
+    "serve-favicon": "~2.2.1",
+    "socket.io": "*"
   },
   "devDependencies": {
     "bower": "*",
