--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "adiutor",
-  "version": "0.8.7",
-  "homepage": "https://github.com/Apexal/adiutor",
+  "name": "ontrac",
+  "version": "0.9.0",
+  "homepage": "https://github.com/Apexal/ontrac",
   "authors": [
     "Frank Matranga <thefrankmatranga@gmail.com>"
   ],
