--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "adiutor",
+  "name": "ontrac",
   "version": "0.9.2",
   "private": true,
   "author": "Frank Matranga <thefrankmatranga@gmail.com>",
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Apexal/adiutor"
+    "url": "https://github.com/Apexal/ontrac"
   },
   "dependencies": {
     "bluebird": "^2.9.34",
