--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ontrac",
   "version": "0.9.4",
   "description": "Online academic assitant for Regis High School.",
-  "private": false,
+  "private": true,
   "author": "Frank Matranga <thefrankmatranga@gmail.com>",
   "contributors": [
     {
@@ -18,7 +18,7 @@
   "scripts": {
 	"postinstall": "bower install; gulp pre; echo \"Almost ready! Make sure you have MongoDB running with 'npm run db' and then run 'npm run setup'\"",
     "db": "src/scripts/mongod",
-    "setup": "python2 src/scripts/connect.py; echo \"Now run 'npm start'!\"",
+    "setup": "python2 src/scripts/connect.py regis; echo \"Now run 'npm start'!\"",
     "watch": "nodemon app.js",
     "debug": "DEBUG=express:* node app.js",
     "start": "gulp pre; NODE_ENV=production node app.js"
