--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     }
   ],
   "config" : {
-	"ip" : "",
-	"port" : "3000",
-	"db" : "regis"
+  	"ip" : "",
+  	"port" : "3000",
+  	"db" : "regis"
   },
   "scripts": {
 	"postinstall": "bower install; gulp pre; echo \"Almost ready! Make sure you have MongoDB running with 'npm run db' and then run 'npm run setup'\"",
     "db": "src/scripts/mongod",
-    "setup": "python2 src/scripts/connect.py regis; echo \"Now run 'npm start'!\"",
+    "setup": "python2 src/setup.py; echo \"Now run 'npm start'!\"",
     "watch": "nodemon app.js",
     "debug": "DEBUG=express:* node app.js",
     "start": "gulp pre; NODE_ENV=production node app.js"
