--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ontrac",
-  "version": "0.9.4",
+  "version": "0.9.7",
   "description": "Online academic assitant for Regis High School.",
   "private": true,
   "author": "Frank Matranga <thefrankmatranga@gmail.com>",
@@ -13,7 +13,7 @@
   "scripts": {
 	  "postinstall": "bower install; gulp pre;",
     "db": "src/scripts/mongod",
-    "setup": "npm run db; npm install; python2 src/setup.py;",
+    "scrape": "python2 src/scripts/scrape.py;",
     "watch": "nodemon app.js",
     "debug": "DEBUG=express:* node app.js",
     "start": "gulp pre; NODE_ENV=production node app.js"
