--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "scrape": "python2 src/scripts/scrape.py;",
     "watch": "nodemon app.js",
     "debug": "DEBUG=express:* node app.js",
-    "start": "gulp pre; NODE_ENV=production node app.js"
+    "start": "gulp 'pre'; NODE_ENV=production node app.js"
   },
   "repository": {
     "type": "git",
