--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,7 @@
   "ignore": [
     "**/.*",
     "node_modules",
-    "public/components",
+    "client/public/components",
     "test",
     "tests"
   ]
