--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "url": "https://github.com/Apexal/ontrac"
   },
   "dependencies": {
+    "bluebird": "*",
     "body-parser": "~1.12.4",
     "cheerio": "*",
     "colors": "*",
