--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "scripts": {
     "postinstall": "bower install; gulp pre;",
     "db": "server/scripts/mongod",
-    "scrape": "python2 server/scripts/scrape.py;",
-    "clean": "python2 server/scripts/clean.py",
+    "scrape": "trms -p server/secrets.json -t course && trms -p server/secrets.json -t person && echo DONE",
     "watch": "nodemon app.js",
     "debug": "DEBUG=express:* node app.js",
     "start": "gulp 'pre'; NODE_ENV=production node app.js"
