Improved HW System - Increased char limit for hw item desc (Derek) - Fixed mobile bug for hw item remove button

--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "serve-favicon": "~2.2.1",
     "socket.io": "*",
     "promisified-request": "*",
-    "underscore": "*"
+    "underscore": "*",
+    "mumble": "*"
   },
   "homepage": "http://www.getontrac.info",
   "devDependencies": {
