--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "scrape": "trms -p server/secrets.json -t course && trms -p server/secrets.json -t person && echo DONE",
     "watch": "nodemon app.js",
     "debug": "DEBUG=express:* node app.js",
-    "start": "gulp 'pre'; NODE_ENV=production node app.js"
+    "start": "gulp 'pre'; NODE_ENV=production node app.js",
+    "test": "echo 'GOOD'"
   },
   "repository": {
     "type": "git",
