--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "jquery-animateNumber": "git@github.com:aishek/jquery-animateNumber.git#~0.0.12"
+    "jquery-animateNumber": "https://github.com/aishek/jquery-animateNumber.git#~0.0.12"
   },
   "ignore": [
     "**/.*",
